[gd_scene load_steps=20 format=3 uid="uid://bfkcav2syaqel"]

[ext_resource type="FontFile" uid="uid://rvsrh05flvrk" path="res://assets/UI/Timetwist/Timetwist-Bold.ttf" id="1_smh3i"]
[ext_resource type="StyleBox" uid="uid://ch1i3cupufr4s" path="res://theme/tex_MenuSign_R.tres" id="2_v3jkk"]
[ext_resource type="Texture2D" uid="uid://c1ilng8lpurjn" path="res://assets/UI/mapbip.png" id="3_sq4t3"]
[ext_resource type="StyleBox" uid="uid://y56arqh4a8by" path="res://theme/tex_MenuSign_RH.tres" id="3_xvo46"]
[ext_resource type="StyleBox" uid="uid://xk12q87v443s" path="res://theme/tex_MenuSign_L.tres" id="4_i5fci"]
[ext_resource type="StyleBox" uid="uid://cnetvw8bws51k" path="res://theme/tex_MenuSign_LH.tres" id="5_g8vyp"]
[ext_resource type="StyleBox" uid="uid://crgwucran5mvh" path="res://theme/tex_MenuSign_M.tres" id="6_tlme5"]
[ext_resource type="StyleBox" uid="uid://byqreqq76aj27" path="res://theme/tex_MenuSign_MH.tres" id="7_gsy31"]
[ext_resource type="StyleBox" uid="uid://c2nb40sqt2n80" path="res://theme/Signpost_Callout.tres" id="8_c03dn"]
[ext_resource type="FontFile" uid="uid://b0m4hay27djem" path="res://assets/UI/Dogica/dogicapixel.ttf" id="8_ct24y"]
[ext_resource type="FontFile" uid="uid://dkqnnj75t7aqf" path="res://assets/UI/Dogica/dogicapixelbold.ttf" id="9_hfffd"]
[ext_resource type="StyleBox" uid="uid://csmu3qd8xapye" path="res://theme/tex_menu_board.tres" id="10_y6brf"]
[ext_resource type="Script" path="res://prefabs/SceneButton/SceneButton.gd" id="12_bpiqe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gcxyk"]
content_margin_left = 6.0
content_margin_top = 8.0
content_margin_right = 6.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mn360"]
content_margin_left = 6.0
content_margin_top = 8.0
content_margin_right = 6.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_shvys"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ql0t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4o7b6"]
bg_color = Color(0.729412, 0.384314, 0.294118, 1)

[sub_resource type="Theme" id="Theme_vjmah"]
Button/colors/font_color = Color(0.211765, 0.00784314, 0.396078, 1)
Button/colors/font_disabled_color = Color(0.211765, 0.00784314, 0.396078, 0.25098)
Button/colors/font_focus_color = Color(0.458824, 0.337255, 0.533333, 1)
Button/colors/font_hover_color = Color(0.458824, 0.337255, 0.533333, 1)
Button/colors/font_hover_pressed_color = Color(0.729412, 0.384314, 0.294118, 1)
Button/colors/font_pressed_color = Color(0.729412, 0.384314, 0.294118, 1)
Button/font_sizes/font_size = 16
Button/fonts/font = ExtResource("1_smh3i")
Button/styles/disabled = ExtResource("2_v3jkk")
Button/styles/focus = ExtResource("3_xvo46")
Button/styles/hover = ExtResource("3_xvo46")
Button/styles/normal = ExtResource("2_v3jkk")
Button/styles/pressed = ExtResource("3_xvo46")
Button_Alt/base_type = &"Button"
Button_Alt/styles/disabled = ExtResource("4_i5fci")
Button_Alt/styles/focus = ExtResource("5_g8vyp")
Button_Alt/styles/hover = ExtResource("5_g8vyp")
Button_Alt/styles/normal = ExtResource("4_i5fci")
Button_Alt/styles/pressed = ExtResource("5_g8vyp")
Button_Alt2/base_type = &"Button"
Button_Alt2/styles/disabled = ExtResource("6_tlme5")
Button_Alt2/styles/focus = ExtResource("7_gsy31")
Button_Alt2/styles/hover = ExtResource("7_gsy31")
Button_Alt2/styles/normal = ExtResource("6_tlme5")
Button_Alt2/styles/pressed = ExtResource("7_gsy31")
Button_Menu/base_type = &"Button"
Button_Menu/colors/font_focus_color = Color(0.458824, 0.337255, 0.533333, 1)
Button_Menu/colors/font_pressed_color = Color(0.458824, 0.337255, 0.533333, 1)
Button_Menu/fonts/font = ExtResource("9_hfffd")
Button_Menu/styles/disabled = SubResource("StyleBoxEmpty_gcxyk")
Button_Menu/styles/focus = ExtResource("8_c03dn")
Button_Menu/styles/hover = ExtResource("8_c03dn")
Button_Menu/styles/normal = SubResource("StyleBoxEmpty_mn360")
Button_Menu/styles/pressed = ExtResource("8_c03dn")
Label/colors/font_color = Color(0.211765, 0.00784314, 0.396078, 1)
Label/fonts/font = ExtResource("8_ct24y")
Label_Bold/base_type = &"Label"
Label_Bold/fonts/font = ExtResource("9_hfffd")
Label_Bold/styles/normal = SubResource("StyleBoxTexture_shvys")
Label_Fancy/base_type = &"Label"
Label_Fancy/fonts/font = ExtResource("1_smh3i")
Label_Grn/base_type = &"Label"
Label_Grn/colors/font_color = Color(0.258824, 0.290196, 0.0705882, 1)
Label_Light/base_type = &"Label"
Label_Light/colors/font_color = Color(0.729412, 0.384314, 0.294118, 1)
Label_Light_Bold/base_type = &"Label"
Label_Light_Bold/colors/font_color = Color(0.729412, 0.384314, 0.294118, 1)
Label_Light_Bold/fonts/font = ExtResource("9_hfffd")
Label_Red/base_type = &"Label"
Label_Red/colors/font_color = Color(0.505882, 0.0235294, 0.0666667, 1)
Label_Sign/base_type = &"Label"
Label_Sign/fonts/font = ExtResource("1_smh3i")
Label_Sign/styles/normal = ExtResource("6_tlme5")
Panel/styles/panel = SubResource("StyleBoxEmpty_1ql0t")
Panel_Highlight/base_type = &"Panel"
Panel_Highlight/styles/panel = SubResource("StyleBoxFlat_4o7b6")
RichTextLabel/colors/default_color = Color(0.215686, 0.00784314, 0.396078, 1)
RichTextLabel/constants/line_separation = 3
RichTextLabel/font_sizes/normal_font_size = 16
RichTextLabel/fonts/bold_font = ExtResource("9_hfffd")
RichTextLabel/fonts/normal_font = ExtResource("8_ct24y")
RichTextLabel/styles/normal = ExtResource("10_y6brf")

[node name="MapItem" type="Button"]
offset_right = 384.0
offset_bottom = 29.0
theme = SubResource("Theme_vjmah")
theme_type_variation = &"Button_Menu"
theme_override_constants/h_separation = 8
text = "Trading Post"
icon = ExtResource("3_sq4t3")
alignment = 0
expand_icon = true
script = ExtResource("12_bpiqe")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
